current development version:
* New option remove_variable_scrutinee_in_branches in Simplifier.
  (The simplifier could instead be parameterised
   on things to simplify, i.e. Let,Match,Lambda+At,Builtins, and so on.)

tip-lib 0.1.2 (released 2015-06-11):
* Make haddock documentation build (reported by Peter Simons.)

tip-lib 0.1.1 (released 2015-06-11):
* List alex and happy as build-tools (thanks to Peter Simons.)
* Add errors.h as extra source file.

tip-lib 0.1 (released 2015-06-11):
* Initial release.