@@ -2,6 +2,7 @@ current development version:
 * New option remove_variable_scrutinee_in_branches in Simplifier.
   (The simplifier could instead be parameterised
    on things to simplify, i.e. Let,Match,Lambda+At,Builtins, and so on.)
+* Export Tip.Utils.usortOn
 
 tip-lib 0.1.2 (released 2015-06-11):
 * Make haddock documentation build (reported by Peter Simons.)
